// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parsing pentabarf XML: overview: auditoriums 1`] = `
[
  {
    "extraPeople": [],
    "id": "A.01 (Someroom)",
    "isPhysical": false,
    "kind": "auditorium",
    "livestreamId": "",
    "name": "A.01 (Someroom)",
    "slug": "a.01_someroom_",
    "talks": Map {
      "E001" => {
        "auditoriumId": "A.01 (Someroom)",
        "dateTs": 1675468800000,
        "endTime": 1675502100000,
        "id": "E001",
        "livestream_endTime": 0,
        "prerecorded": true,
        "pretalxCode": undefined,
        "qa_startTime": null,
        "speakers": [
          {
            "email": "",
            "id": "9012",
            "matrix_id": "",
            "name": "John Teststone",
            "role": "speaker",
          },
          {
            "email": "",
            "id": "90367",
            "matrix_id": "",
            "name": "Evå 完牲 Exampleson",
            "role": "speaker",
          },
        ],
        "startTime": 1675501200000,
        "subtitle": "",
        "title": "Testcon01: Opening Remarks",
      },
    },
    "trackType": "",
  },
]
`;

exports[`parsing pentabarf XML: overview: conference 1`] = `
{
  "auditoriums": [
    {
      "extraPeople": [],
      "id": "A.01 (Someroom)",
      "isPhysical": false,
      "kind": "auditorium",
      "livestreamId": "",
      "name": "A.01 (Someroom)",
      "slug": "a.01_someroom_",
      "talks": Map {
        "E001" => {
          "auditoriumId": "A.01 (Someroom)",
          "dateTs": 1675468800000,
          "endTime": 1675502100000,
          "id": "E001",
          "livestream_endTime": 0,
          "prerecorded": true,
          "pretalxCode": undefined,
          "qa_startTime": null,
          "speakers": [
            {
              "email": "",
              "id": "9012",
              "matrix_id": "",
              "name": "John Teststone",
              "role": "speaker",
            },
            {
              "email": "",
              "id": "90367",
              "matrix_id": "",
              "name": "Evå 完牲 Exampleson",
              "role": "speaker",
            },
          ],
          "startTime": 1675501200000,
          "subtitle": "",
          "title": "Testcon01: Opening Remarks",
        },
      },
      "trackType": "",
    },
  ],
  "interestRooms": [],
  "title": "Testcon01",
}
`;

exports[`parsing pentabarf XML: overview: interestRooms 1`] = `[]`;

exports[`parsing pentabarf XML: overview: speakers 1`] = `
[
  {
    "email": "",
    "id": "9012",
    "matrix_id": "",
    "name": "John Teststone",
    "role": "speaker",
  },
  {
    "email": "",
    "id": "90367",
    "matrix_id": "",
    "name": "Evå 完牲 Exampleson",
    "role": "speaker",
  },
]
`;

exports[`parsing pentabarf XML: overview: talks 1`] = `
[
  {
    "auditoriumId": "A.01 (Someroom)",
    "dateTs": 1675468800000,
    "endTime": 1675502100000,
    "id": "E001",
    "livestream_endTime": 0,
    "prerecorded": true,
    "pretalxCode": undefined,
    "qa_startTime": null,
    "speakers": [
      {
        "email": "",
        "id": "9012",
        "matrix_id": "",
        "name": "John Teststone",
        "role": "speaker",
      },
      {
        "email": "",
        "id": "90367",
        "matrix_id": "",
        "name": "Evå 完牲 Exampleson",
        "role": "speaker",
      },
    ],
    "startTime": 1675501200000,
    "subtitle": "",
    "title": "Testcon01: Opening Remarks",
  },
]
`;

exports[`tracks that set a online qa value correctly apply to talks: talks 1`] = `
[
  {
    "auditoriumId": "A.01 (Someroom)",
    "dateTs": 1675468800000,
    "endTime": 1675502100000,
    "id": "E001",
    "livestream_endTime": 0,
    "prerecorded": true,
    "pretalxCode": undefined,
    "qa_startTime": 0,
    "speakers": [
      {
        "email": "",
        "id": "9012",
        "matrix_id": "",
        "name": "John Teststone",
        "role": "speaker",
      },
      {
        "email": "",
        "id": "90367",
        "matrix_id": "",
        "name": "Evå 完牲 Exampleson",
        "role": "speaker",
      },
    ],
    "startTime": 1675501200000,
    "subtitle": "",
    "title": "Testcon01: Opening Remarks",
  },
  {
    "auditoriumId": "A.01 (Someroom)",
    "dateTs": 1675468800000,
    "endTime": 1675503900000,
    "id": "E002",
    "livestream_endTime": 0,
    "prerecorded": true,
    "pretalxCode": undefined,
    "qa_startTime": 0,
    "speakers": [
      {
        "email": "",
        "id": "9012",
        "matrix_id": "",
        "name": "John Teststone",
        "role": "speaker",
      },
      {
        "email": "",
        "id": "90367",
        "matrix_id": "",
        "name": "Evå 完牲 Exampleson",
        "role": "speaker",
      },
    ],
    "startTime": 1675502100000,
    "subtitle": "",
    "title": "Testcon01: Opening Remarks",
  },
  {
    "auditoriumId": "A.01 (Someroom)",
    "dateTs": 1675468800000,
    "endTime": 1675504800000,
    "id": "E003",
    "livestream_endTime": 0,
    "prerecorded": true,
    "pretalxCode": undefined,
    "qa_startTime": null,
    "speakers": [
      {
        "email": "",
        "id": "9012",
        "matrix_id": "",
        "name": "John Teststone",
        "role": "speaker",
      },
      {
        "email": "",
        "id": "90367",
        "matrix_id": "",
        "name": "Evå 完牲 Exampleson",
        "role": "speaker",
      },
    ],
    "startTime": 1675503000000,
    "subtitle": "",
    "title": "Testcon01: Opening Remarks",
  },
  {
    "auditoriumId": "AQ.5 (QA Room)",
    "dateTs": 1675468800000,
    "endTime": 1675505700000,
    "id": "E004",
    "livestream_endTime": 0,
    "prerecorded": true,
    "pretalxCode": undefined,
    "qa_startTime": 0,
    "speakers": [
      {
        "email": "",
        "id": "9012",
        "matrix_id": "",
        "name": "John Teststone",
        "role": "speaker",
      },
      {
        "email": "",
        "id": "90367",
        "matrix_id": "",
        "name": "Evå 完牲 Exampleson",
        "role": "speaker",
      },
    ],
    "startTime": 1675503900000,
    "subtitle": "",
    "title": "Testcon01: Opening Remarks",
  },
]
`;
